# MoveFetch

./: CMakeLists.txt  README.md  config_parser.cpp  config_parser.h  fastfetch_loader.cpp  fastfetch_loader.h  main.cpp  video_ascii_renderer.cpp  video_ascii_renderer.h
